# SimplifiedCompiler

./: .gitignore  CMakeLists.txt  LICENSE  README.md
compsrc/: ASTNode.cpp  ASTNode.h  CodeGenerator.cpp  CodeGenerator.h  Expression.cpp  Expression.h  FakeLinker.cpp  FakeLinker.h  Instruction.cpp  Instruction.h  Lexer.cpp  Lexer.h  MemoryAllocator.cpp  MemoryAllocator.h  Parser.cpp  Parser.h  Shared.cpp  Shared.h  Statement.cpp  Statement.h  SymbolTable.cpp  SymbolTable.h  test.cpp  test.txt  test1.cpp  test1.txt  testprint.cpp
docs/: .~lock.2024大作业.docx#  2024大作业.docx  opTable.txt
document/: .~lock.2024大作业.docx#
samplesrc/: sample1.txt  sample2.txt  sample3.txt  sample4.txt  sample5.txt
src/: ASTNode.h  Lexer.cpp  Lexer.h  Shared.h  test.cpp
tmp/: AutomataCreator.cpp  CharTypeCreator.cpp
virsrc/: Virtual copy.cpp  Virtual.cpp
